<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="stepFragment"
            type="com.steven.pedometer.ui.StepFragment"/>
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/dist_calorie_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/container_distance"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/pedometer_info_margin_start"
                android:layout_marginTop="@dimen/pedometer_info_margin_start"
                android:layout_alignParentTop="true">
                <TextView
                    android:id="@+id/text_distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_distance_size"
                    android:textColor="@color/colorAccent"
                    android:includeFontPadding="false"
                    android:text="@string/distance"/>

                <TextView
                    android:id="@+id/text_distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_distance_margin_start"
                    android:textSize="@dimen/text_distance_size"
                    android:textColor="@color/colorAccent"
                    android:includeFontPadding="false"
                    android:text="@string/default_distance_string"
                    android:layout_toRightOf="@id/text_distance_label"/>

                <TextView
                    android:id="@+id/text_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_distance_margin_start"
                    android:textSize="@dimen/text_size_measure"
                    android:textColor="@color/colorAccent"
                    android:includeFontPadding="false"
                    android:text="@string/meter"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_calorie"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_distance"
                android:paddingLeft="@dimen/pedometer_info_margin_start"
                android:layout_marginTop="@dimen/pedometer_info_margin_top"
                >
                <TextView
                    android:id="@+id/text_calorie_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_distance_size"
                    android:textColor="@color/colorAccent"
                    android:includeFontPadding="false"
                    android:text="@string/calorie"/>

                <TextView
                    android:id="@+id/text_calorie_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_distance_margin_start"
                    android:textSize="@dimen/text_distance_size"
                    android:textColor="@color/colorAccent"
                    android:includeFontPadding="false"
                    android:text="@string/default_calorie_string"/>

                <TextView
                    android:id="@+id/text_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_distance_margin_start"
                    android:textSize="@dimen/text_size_measure"
                    android:textColor="@color/colorAccent"
                    android:includeFontPadding="false"
                    android:text="@string/calorie_measure"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/dist_calorie_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/step_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_step_num"
                android:textSize="@dimen/text_size_step"
                android:textColor="@color/colorAccent"
                android:includeFontPadding="false"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/activation_button"
                android:layout_below="@id/step_count"
                android:src="@drawable/ic_play_arrow_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/activation_button_margin_top"
                android:onClick="@{stepFragment.onActivationButtonClick}"/>
        </LinearLayout>
    </RelativeLayout>
</layout>
